Changed the background

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -479,7 +479,7 @@ hr {
 @media (max-width: 430px) {
   #hero {
     height: 100vh;
-    background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(../pexels-photo-267885.jpeg);
+    background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)), url(../img/hero-bg1.png);
     background-position: bottom;
     background-size: cover;
   }
