--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -408,7 +408,7 @@ hr {
   width: 100%;
   height: 100%;
   margin: 70px 0 0 0;
-  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),  url(../img/hero-bg1.png);
+  background: linear-gradient(rgba(255, 255, 255, 0.8), rgba(255, 255, 255, 0.8)),  url(../img/hero-bg1.jpg);
   background-position: top;
   background-size: cover;
 }
@@ -589,7 +589,7 @@ section {
 --------------------------------------------------------------*/
 
 .about {
-  background: linear-gradient(#FFB84C, #F16767e7, #F5EAEAd8), url(../post-bg.jpg);
+  background: linear-gradient(#FFB84C, #F16767e7, #F5EAEAd8), url(../post-bg1.JPG);
   background-position: bottom;
   background-size: cover;
 }
@@ -1486,17 +1486,15 @@ header.masthead .post-heading .meta a {
 	background: #f6f6f6;
 	border-radius: 5px;
 	overflow: hidden;
-  transition: ease-in-out 0.3s;
-
 	cursor: pointer;
 }
 
 .btnresource:hover {
-	background: #af9bf7;
+	background: #A459D1;
 }
 
 .btnresource:active {
-	background: #9DD8D2;
+	background: #F16767;
 }
 
 .btnresource_text,
@@ -1524,7 +1522,7 @@ header.masthead .post-heading .meta a {
 .btnresource_text h4 {
   text-align: justify;
   font-size: 14px;
-  color: #999;
+  color: #444444;
   margin: 5px 0 5px 0;
   margin: 0;
 }
@@ -1536,7 +1534,7 @@ header.masthead .post-heading .meta a {
 .btnresource i{
   text-align: center;
   font-size: 40px;
-  color: #FFB84C;
+  color: #F16767;
 }
 
 .btnresource_icon {
